--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GOOGLE_ID="775660571863-ub94qk2j6utrmmb9fat4b4e1l456l121.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
 MONGODB_URI="mongodb+srv://ecommerce:Tienxinhtrai_21032001@cluster0.wqnoduj.mongodb.net/?retryWrites=true&w=majority"
+S3_ACCESS_KEY="AKIAQV6HV5HXQH7AGGXE"
+S3_SECRET_ACCESS_KEY="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"
