--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.335.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "mime-types": "^2.1.35",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
     "multiparty": "^4.2.3",
